// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown render renders correctly with correct as true 1`] = `
<WithStyles(WithFormControlContext(Select))
  MenuProps={
    Object {
      "disablePortal": true,
      "keepMounted": true,
    }
  }
  disabled={false}
  input={
    <WithStyles(Component)
      correct={true}
    />
  }
  onChange={[Function]}
  value="Jumped"
>
  <WithStyles(MenuItem)
    key="Jumped-0"
    value="Jumped"
  >
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Jumped",
        }
      }
    />
  </WithStyles(MenuItem)>
  <WithStyles(MenuItem)
    key="Laughed-1"
    value="Laughed"
  >
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Laughed",
        }
      }
    />
  </WithStyles(MenuItem)>
  <WithStyles(MenuItem)
    key="Smiled-2"
    value="Smiled"
  >
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Smiled",
        }
      }
    />
  </WithStyles(MenuItem)>
</WithStyles(WithFormControlContext(Select))>
`;

exports[`Dropdown render renders correctly with default props 1`] = `
<WithStyles(WithFormControlContext(Select))
  MenuProps={
    Object {
      "disablePortal": true,
      "keepMounted": true,
    }
  }
  disabled={false}
  input={
    <WithStyles(Component)
      correct={false}
    />
  }
  onChange={[Function]}
  value="Jumped"
>
  <WithStyles(MenuItem)
    key="Jumped-0"
    value="Jumped"
  >
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Jumped",
        }
      }
    />
  </WithStyles(MenuItem)>
  <WithStyles(MenuItem)
    key="Laughed-1"
    value="Laughed"
  >
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Laughed",
        }
      }
    />
  </WithStyles(MenuItem)>
  <WithStyles(MenuItem)
    key="Smiled-2"
    value="Smiled"
  >
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Smiled",
        }
      }
    />
  </WithStyles(MenuItem)>
</WithStyles(WithFormControlContext(Select))>
`;

exports[`Dropdown render renders correctly with disabled prop as true 1`] = `
<WithStyles(WithFormControlContext(Select))
  MenuProps={
    Object {
      "disablePortal": true,
      "keepMounted": true,
    }
  }
  disabled={true}
  input={
    <WithStyles(Component)
      correct={false}
    />
  }
  onChange={[Function]}
  value="Jumped"
>
  <WithStyles(MenuItem)
    key="Jumped-0"
    value="Jumped"
  >
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Jumped",
        }
      }
    />
  </WithStyles(MenuItem)>
  <WithStyles(MenuItem)
    key="Laughed-1"
    value="Laughed"
  >
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Laughed",
        }
      }
    />
  </WithStyles(MenuItem)>
  <WithStyles(MenuItem)
    key="Smiled-2"
    value="Smiled"
  >
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Smiled",
        }
      }
    />
  </WithStyles(MenuItem)>
</WithStyles(WithFormControlContext(Select))>
`;
